[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/themes/interaction_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/scripts/ui/InventoryUI.gd" type="Script" id=3]
[ext_resource path="res://src/ui/menu/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/characters/portraits/algernon.png" type="Texture" id=5]
[ext_resource path="res://src/scripts/ui/story/StoryUI.gd" type="Script" id=6]
[ext_resource path="res://src/scripts/ui/MenuUI.gd" type="Script" id=7]


[sub_resource type="Animation" id=1]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Curtain:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="UI" type="CanvasLayer"]

[node name="Curtain" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryUI" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryHBox" type="HBoxContainer" parent="InventoryUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -28.0
margin_right = 28.0
margin_bottom = 28.0
grow_horizontal = 2
mouse_filter = 2
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
mouse_filter = 1
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryContainer" type="MarginContainer" parent="StoryUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.10352e-05
margin_top = -390.0
margin_right = 6.10352e-05
margin_bottom = -390.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryVBoxContainer" type="VBoxContainer" parent="StoryUI/StoryContainer"]
grow_horizontal = 2
alignment = 1

[node name="PlayerPortrait" type="TextureRect" parent="StoryUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="NPCPortrait" type="TextureRect" parent="StoryUI"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_bottom = 200.0

[node name="TypeTimer" type="Timer" parent="StoryUI"]

[node name="MenuUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -215.5
margin_right = 124.5
margin_bottom = 215.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="MenuUI/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 249.0
margin_bottom = 93.0
text = "Resume"

[node name="SaveButton" parent="MenuUI/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 97.0
margin_right = 249.0
margin_bottom = 190.0
text = "Save"

[node name="LoadButton" parent="MenuUI/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 194.0
margin_right = 249.0
margin_bottom = 287.0
text = "Load"

[node name="TitleButton" parent="MenuUI/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 291.0
margin_right = 249.0
margin_bottom = 384.0
text = "Title"

[node name="QuitButton" parent="MenuUI/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 388.0
margin_right = 249.0
margin_bottom = 481.0
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
[connection signal="timeout" from="StoryUI/TypeTimer" to="StoryUI" method="_on_TypeTimer_timeout"]
[connection signal="pressed" from="MenuUI/VBoxContainer/ResumeButton" to="MenuUI" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MenuUI/VBoxContainer/SaveButton" to="MenuUI" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MenuUI/VBoxContainer/LoadButton" to="MenuUI" method="_on_LoadButton_pressed"]
[connection signal="pressed" from="MenuUI/VBoxContainer/TitleButton" to="MenuUI" method="_on_TitleButton_pressed"]
[connection signal="pressed" from="MenuUI/VBoxContainer/QuitButton" to="MenuUI" method="_on_QuitButton_pressed"]
